adding prop placholders for twitter keys

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.thymeleaf.cache= false
+spring.social.twitter.appId={{put app ID here}}
+spring.social.twitter.appSecret={{put app secret here}}
