updating props file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.thymeleaf.cache= false
-spring.social.twitter.appId=13050234
-spring.social.twitter.appSecret=Q8XMMcGMg6IiXkrqLTt26yWo0JV6Q1Ta3fDWIoocuBd49
+spring.social.twitter.appId={{put app ID here}}
+spring.social.twitter.appSecret={{put app secret here}}
