--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.thymeleaf.cache= false
-spring.social.twitter.appId={{put app ID here}}
-spring.social.twitter.appSecret={{put app secret here}}
+spring.thymeleaf.cache= true
+spring.social.twitter.appId=36l901PIgIUBMD44PtfW9jMvK
+spring.social.twitter.appSecret=2tbEC4zA8yZ2FARRQP6aiQUH9OaPrPAtrJxsIJuxIhU65ByHXE
