pushing POC work along with some new libs - hacky implementation of twitter search and streaming api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.thymeleaf.cache= true
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.resources.static-locations=classpath:/static/
 spring.social.twitter.appId=36l901PIgIUBMD44PtfW9jMvK
 spring.social.twitter.appSecret=2tbEC4zA8yZ2FARRQP6aiQUH9OaPrPAtrJxsIJuxIhU65ByHXE
