--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.thymeleaf.mode=HTML5
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.resources.static-locations=classpath:/static/
-spring.social.twitter.appId=36l901PIgIUBMD44PtfW9jMvK
-spring.social.twitter.appSecret=2tbEC4zA8yZ2FARRQP6aiQUH9OaPrPAtrJxsIJuxIhU65ByHXE
+spring.social.twitter.appId={{put app ID here}}
+spring.social.twitter.appSecret={{put app secret here}}
