Full streaming + search + location implementation along with some temporary bootstrap css

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.thymeleaf.cache= true
+spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.resources.static-locations=classpath:/static/
-spring.social.twitter.appId={{put app ID here}}
-spring.social.twitter.appSecret={{put app secret here}}
+spring.social.twitter.appId=
+spring.social.twitter.appSecret=
