--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	
 	<groupId>com.cs4230.finalproject</groupId>
-	<artifactId>twitterapp</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>twitter-thing</artifactId>
+	<version>0.0.1</version>
 	<packaging>jar</packaging>
-	
-	<name>TwitterApp</name>
-	<description>Final Project Seed</description>
-	
+	<name>twitter-thing</name>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
@@ -22,7 +19,6 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-		<start-class>com.cs4230.finalproject.controller.TwitterController</start-class>
 	</properties>
 	
 	<dependencies>
@@ -46,7 +42,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>webjars-locator</artifactId>
@@ -78,6 +73,18 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>2.4</version>
+				<executions>
+					<execution>
+						<id>copy-dependencies</id>
+						<phase>package</phase>
+						<goals><goal>copy-dependencies</goal></goals>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
