--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
-spring.thymeleaf.cache=false
-spring.thymeleaf.mode=HTML5
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-spring.resources.static-locations=classpath:/static/
-spring.social.twitter.appId=
-spring.social.twitter.appSecret=
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.content-type=text/html
+spring.thymeleaf.cache=false
+spring.main.banner-mode=console
+spring.thymeleaf.enabled=true
+spring.social.twitter.appId=36l901PIgIUBMD44PtfW9jMvK
+spring.social.twitter.appSecret=2tbEC4zA8yZ2FARRQP6aiQUH9OaPrPAtrJxsIJuxIhU65ByHXE
