--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: java
+jdk:
+  - oraclejdk8
 sudo: false
 script: mvn clean verify package
 deploy:
@@ -8,3 +10,6 @@ deploy:
   app: cs4230-twitter-thing
   on:
     repo: WeberCS4230/Twitter-Thing
+cache:
+  directories:
+    - '$HOME/.m2/repository'
