--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-spring.thymeleaf.mode=HTML5
+spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.content-type=text/html
 spring.thymeleaf.cache=false
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
 spring.main.banner-mode=console
+spring.thymeleaf.check-template-location=true
 spring.thymeleaf.enabled=true
 spring.social.twitter.appId=36l901PIgIUBMD44PtfW9jMvK
 spring.social.twitter.appSecret=2tbEC4zA8yZ2FARRQP6aiQUH9OaPrPAtrJxsIJuxIhU65ByHXE
