added username and password fields

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.devtools.livereload.enabled=true
 spring.main.banner-mode=console
 spring.thymeleaf.check-template-location=true
 spring.thymeleaf.enabled=true
+username =
+password =
