JS ES6 refactoring, POM cleanup, static files cleanup, moving sensitive info to system environment variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
+spring.devtools.livereload.enabled=false
+spring.devtools.restart.enabled=false
+spring.main.banner-mode=console
+spring.thymeleaf.cache=true
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.content-type=text/html
+spring.thymeleaf.enabled=true
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-spring.thymeleaf.mode=LEGACYHTML5
-spring.thymeleaf.encoding=UTF-8
-spring.thymeleaf.content-type=text/html
-spring.thymeleaf.cache=false
-spring.devtools.restart.enabled=true
-spring.devtools.livereload.enabled=true
-spring.main.banner-mode=console
-spring.thymeleaf.check-template-location=true
-spring.thymeleaf.enabled=true
